Ya se pueden descargar las contancias emitidas